2006-05-22     Victor Stone <fourstones@users.sourceforge.net>

     * cclib/cc-uploadapi.php 3313:
     * cclib/cc-feed.php 3314:
     * cclib/cc-uploadapi.php 3314:
         bugfix: file replace was broken

2006-05-10     Victor Stone <fourstones@users.sourceforge.net>

     * ccextras/cc-activity-log.php 3291:
     * ccextras/cc-archive.php 3291:
     * ccextras/cc-blog-ping.php 3291:
     * ccextras/cc-bpm.php 3291:
     * ccextras/cc-data-dump.php 3291:
     * ccextras/cc-export-settings.php 3291:
     * ccextras/cc-fileman.inc 3291:
     * ccextras/cc-fileman.php 3291:
     * ccextras/cc-flag.php 3291:
     * ccextras/cc-format.php 3291:
     * ccextras/cc-howididit.php 3291:
     * ccextras/cc-import-files.php 3291:
     * ccextras/cc-lang.inc 3291:
     * ccextras/cc-language.php 3291:
     * ccextras/cc-mail.php 3291:
     * ccextras/cc-music-submit.php 3291:
     * ccextras/cc-notify.inc 3291:
     * ccextras/cc-notify.php 3291:
     * ccextras/cc-nswf.php 3291:
     * ccextras/cc-reviews.php 3291:
     * ccextras/cc-skin-export.php 3291:
     * ccextras/cc-stats.php 3291:
     * ccextras/cc-throttle.php 3291:
     * ccextras/cc-topics.php 3291:
     * ccextras/cc-update.php 3291:
     * ccextras/cc-user-info-x.php 3291:
     * ccextras/update_v_1_2h.inc 3291:
     * ccextras/update_v_1_2k.inc 3291:
     * ccextras/update_v_2_1a.inc 3291:
         phpdoc
     * cc-custom.php 3292:
         bugfix: link to reviews was off
     * mixter-files/dev_notes.xml 3293:
         refer to ccfiles version
     * cclib/cc-admin.php 3294:
     * cclib/cc-api.php 3294:
     * cclib/cc-ban.php 3294:
     * cclib/cc-config.php 3294:
     * cclib/cc-contest-admin.inc 3294:
     * cclib/cc-contest.php 3294:
     * cclib/cc-database.php 3294:
     * cclib/cc-db-admin.php 3294:
     * cclib/cc-debug.php 3294:
     * cclib/cc-defines.php 3294:
     * cclib/cc-editorials.php 3294:
     * cclib/cc-events.php 3294:
     * cclib/cc-feed.php 3294: